# lastfm.plp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  catalogo.json  dados.json  lastfm-plp.cabal  scrobbles.json  usuarios.json
haskell/: catalogo.json
haskell/src/Funcionalidades/: Conquistas.hs  Funcionalidades.hs
haskell/src/Types/: Genero.hs  Musica.hs  Scrobble.hs
prolog/: catalogo.pl  lastfm.pl  usuarios.json
prolog/Funcionalidades/: Conquistas.pl  Funcionalidades.pl
prolog/Types/: Genero.pl  Musica.pl  Scrobble.pl  Usuario.pl
prolog/main/: Main.pl
src/Funcionalidades/: Conquistas.hs  Conquistas.pl  Funcionalidades.hs  Funcionalidades.pl
src/Types/: BaseDeDados.hs  Genero.hs  Genero.pl  Musica.hs  Musica.pl  Scrobble.hs  Scrobble.pl  Usuario.hs  Usuario.pl
src/main/: Main.hs  Main.pl
